# redis-haskell

./: .gitignore  LICENSE  README.md  TODO  redis-haskell.cabal
src/Database/: Redis.hs
src/Database/Redis/: Command.hs  Core.hs  Internal.hs  SubHub.hs
testsuite/: rebuild.sh  runtest.sh  tests.cabal
testsuite/tests/Test/: Util.hs
testsuite/tests/Test/Database/Redis/: CommandTests.hs
